# carrier_data_scrapping

./: README.md  example.csv  main.ipynb  mapping.csv  mapping___.csv  pyproject.toml  results.csv  setup.py  setup.sh  token.txt
result/: Quảng Nam_Đà Nẵng_all_dates.csv
