[project]
name = "carrier-data-scrapping"
version = "0.1.0"
description = ""
authors = [
    {name = "Duc"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
